--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@keystone-6/auth": "^1.0.1",
     "@keystone-6/core": "^1.0.1",
     "@keystone-6/fields-document": "^1.0.1",
+    "dotenv": "^14.2.0",
     "typescript": "^4.5.4"
   },
   "engines": {
