--- a/app/package.json
+++ b/app/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "keystone-app",
-  "version": "1.0.0",
+  "name": "mdeveng_student_blog",
   "private": true,
   "scripts": {
-    "dev": "keystone dev",
-    "start": "keystone start",
-    "build": "keystone build",
-    "postinstall": "keystone postinstall"
+    "postinstall": "keystone postinstall",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@keystone-6/auth": "^1.0.1",
     "@keystone-6/core": "^1.0.1",
     "@keystone-6/fields-document": "^1.0.1",
-    "dotenv": "^14.2.0",
-    "typescript": "^4.5.4"
+    "next": "12.0.8",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
-  "engines": {
-    "node": "^14.15 || ^16.13"
+  "devDependencies": {
+    "eslint": "8.7.0",
+    "eslint-config-next": "12.0.8",
+    "typescript": "^4.5.4"
   }
 }
